--- a/main.css
+++ b/main.css
@@ -256,8 +256,6 @@ img {
     border-radius: 100px;
     border: 1px solid #2887D9;
     background: lightgray 50%/cover no-repeat;
-    position: absolute;
-    top: 216px;
   }
 }
 
@@ -288,8 +286,6 @@ img {
     border-radius: 100px;
     border: 1px solid #2887D9;
     background: lightgray 50%/cover no-repeat;
-    position: absolute;
-    top: 606px;
   }
 }
 
@@ -351,22 +347,111 @@ img {
   }
 }
 
+@media screen and (max-width: 1365px) {
+  .fon {
+    width: 153px;
+    height: 150.529px;
+    flex-shrink: 0;
+    margin-left: 39px;
+    margin: 52px;
+    margin-bottom: 23px;
+  }
+}
 @media screen and (min-width: 1366px) and (max-width: 1919px) {
   .fon {
-    display: flex;
     width: 528px;
     height: 520px;
     flex-shrink: 0;
+    margin-left: 70px;
+    margin-top: 100px;
+    margin-bottom: 72px;
   }
 }
 @media screen and (min-width: 1920px) {
   .fon {
-    display: flex;
     width: 743px;
     height: 731px;
     background-color: aqua;
-    position: absolute;
-    left: 989px;
-    top: 144px;
+    margin-left: 60px;
+    margin-top: 144px;
+    margin-bottom: 98px;
+  }
+}
+
+.title-answer-and-question {
+  color: var(--blue-dark-blue, #2887D9);
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 18px; /* 112.5% */
+  margin-top: 55px;
+  margin-left: 24px;
+}
+@media screen and (min-width: 1366px) and (max-width: 1919px) {
+  .title-answer-and-question {
+    display: none;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .title-answer-and-question {
+    display: none;
+  }
+}
+
+.intresting {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+}
+@media screen and (min-width: 1366px) and (max-width: 1919px) {
+  .intresting {
+    display: none;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .intresting {
+    display: none;
+  }
+}
+
+.intresting-1 {
+  color: var(--blue-dark-blue, #2887D9);
+  /* mobile/main text */
+  font-family: Open Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 137.5% */
+}
+@media screen and (min-width: 1366px) and (max-width: 1919px) {
+  .intresting-1 {
+    display: none;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .intresting-1 {
+    display: none;
+  }
+}
+
+.intresting-2 {
+  color: var(--gray-maintext, #3A3B3D);
+  /* mobile/main text */
+  font-family: Open Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 137.5% */
+}
+@media screen and (min-width: 1366px) and (max-width: 1919px) {
+  .intresting-2 {
+    display: none;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .intresting-2 {
+    display: none;
   }
 }/*# sourceMappingURL=main.css.map */
