--- a/main.css
+++ b/main.css
@@ -247,6 +247,8 @@ img {
     border-radius: 71.146px;
     border: 0.711px solid #2887D9;
     background: lightgray 50%/cover no-repeat;
+    position: absolute;
+    margin-top: 60px;
   }
 }
 @media screen and (min-width: 1920px) {
@@ -256,6 +258,8 @@ img {
     border-radius: 100px;
     border: 1px solid #2887D9;
     background: lightgray 50%/cover no-repeat;
+    position: absolute;
+    margin-top: 80px;
   }
 }
 
@@ -277,6 +281,8 @@ img {
     border-radius: 71.146px;
     border: 0.711px solid #2958E5;
     background: lightgray 50%/cover no-repeat;
+    position: absolute;
+    margin-top: 100px;
   }
 }
 @media screen and (min-width: 1920px) {
@@ -286,6 +292,8 @@ img {
     border-radius: 100px;
     border: 1px solid #2887D9;
     background: lightgray 50%/cover no-repeat;
+    position: absolute;
+    margin-top: 117px;
   }
 }
 
@@ -333,6 +341,9 @@ img {
     width: 40px;
     height: 40px;
     flex-shrink: 0;
+    position: absolute;
+    left: 354px;
+    top: 635px;
   }
 }
 @media screen and (min-width: 1920px) {
@@ -361,10 +372,10 @@ img {
   .fon {
     width: 528px;
     height: 520px;
-    flex-shrink: 0;
-    margin-left: 70px;
-    margin-top: 100px;
-    margin-bottom: 72px;
+    margin-left: 55px;
+    margin-top: 25px;
+    margin-bottom: 57px;
+    background-color: aqua;
   }
 }
 @media screen and (min-width: 1920px) {
@@ -373,7 +384,7 @@ img {
     height: 731px;
     background-color: aqua;
     margin-left: 60px;
-    margin-top: 144px;
+    margin-top: 100px;
     margin-bottom: 98px;
   }
 }
